Parser/ass4_16CS30027.output
Terminals unused in grammar

   TYPEDEF
   STRUCT
   UNION
   AND_ASSIGN
   HASH
   PUNCTUATORS
   COMMENT


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | LOB expression ROB

    5 constant: INT_CONSTANT
    6         | FLOAT_CONSTANT
    7         | ENU_CONSTANT
    8         | CHAR_CONSTANT

    9 postfix_expression: primary_expression
   10                   | postfix_expression LSB expression RSB
   11                   | postfix_expression LOB ROB
   12                   | postfix_expression LOB argument_expression_list ROB
   13                   | postfix_expression DOT IDENTIFIER
   14                   | postfix_expression PTR_OP IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP
   17                   | LOB type_name ROB LCB initializer_list RCB
   18                   | LOB type_name ROB LCB initializer_list COMMA RCB

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INC_OP unary_expression
   23                 | DEC_OP unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF LOB type_name ROB

   27 unary_operator: BITAND
   28               | MULT
   29               | PLUS
   30               | MINUS
   31               | TILDE
   32               | EXCLM

   33 cast_expression: unary_expression
   34                | LOB type_name ROB cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULT cast_expression
   37                          | multiplicative_expression DIVSN cast_expression
   38                          | multiplicative_expression MODULO cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_OP additive_expression
   44                 | shift_expression RIGHT_OP additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LT shift_expression
   47                      | relational_expression GT shift_expression
   48                      | relational_expression LE_OP shift_expression
   49                      | relational_expression GE_OP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NE_OP relational_expression

   53 and_expression: equality_expression
   54               | and_expression BITAND equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression CONJ and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression PIPE exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression AND_OP inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression OR_OP logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression QUESMARK expression COLON conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: EQUALITY
   68                    | MUL_ASSIGN
   69                    | DIV_ASSIGN
   70                    | MOD_ASSIGN
   71                    | ADD_ASSIGN
   72                    | SUB_ASSIGN
   73                    | LEFT_ASSIGN
   74                    | RIGHT_ASSIGN
   75                    | BITAND_ASSIGN
   76                    | XOR_ASSIGN
   77                    | OR_ASSIGN

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers SEMICOLON
   82            | declaration_specifiers init_declarator_list SEMICOLON

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers
   89                       | function_specifier
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQUALITY initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | _BOOL
  109               | _COMPLEX
  110               | _IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 enum_specifier: ENUM LCB enumerator_list RCB
  117               | ENUM IDENTIFIER LCB enumerator_list RCB
  118               | ENUM LCB enumerator_list COMMA RCB
  119               | ENUM IDENTIFIER LCB enumerator_list COMMA RCB
  120               | ENUM IDENTIFIER

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER EQUALITY constant_expression

  125 type_qualifier: CONST
  126               | VOLATILE
  127               | RESTRICT

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | LOB declarator ROB
  133                  | direct_declarator LSB type_qualifier_list_opt assignment_expression_opt RSB
  134                  | direct_declarator LSB STATIC type_qualifier_list_opt assignment_expression RSB
  135                  | direct_declarator LSB type_qualifier_list_opt MULT RSB
  136                  | direct_declarator LOB parameter_type_list ROB
  137                  | direct_declarator LOB identifier_list ROB
  138                  | direct_declarator LOB ROB

  139 type_qualifier_list_opt: type_qualifier_list
  140                        | /* empty */

  141 assignment_expression_opt: assignment_expression
  142                          | /* empty */

  143 pointer: MULT
  144        | MULT type_qualifier_list
  145        | MULT pointer
  146        | MULT type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list COMMA ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list COMMA parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list COMMA IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | LCB initializer_list RCB
  160            | LCB initializer_list COMMA RCB

  161 initializer_list: initializer
  162                 | designation initializer
  163                 | initializer_list COMMA initializer
  164                 | initializer_list COMMA designation initializer

  165 designation: designator_list EQUALITY

  166 designator_list: designator
  167                | designator_list designator

  168 designator: LSB constant_expression RSB
  169           | DOT IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER COLON statement
  177                  | CASE constant_expression COLON statement
  178                  | DEFAULT COLON statement

  179 compound_statement: LCB RCB
  180                   | LCB block_item_list RCB

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: SEMICOLON
  186                     | expression SEMICOLON

  187 selection_statement: IF LOB expression ROB statement
  188                    | IF LOB expression ROB statement ELSE statement
  189                    | SWITCH LOB expression ROB statement

  190 iteration_statement: WHILE LOB expression ROB statement
  191                    | DO statement WHILE LOB expression ROB SEMICOLON
  192                    | FOR LOB expression_statement expression_statement expression ROB statement
  193                    | FOR LOB expression_statement expression_statement ROB statement
  194                    | FOR LOB declaration expression_statement expression ROB statement
  195                    | FOR LOB declaration expression_statement ROB statement

  196 jump_statement: GOTO IDENTIFIER SEMICOLON
  197               | CONTINUE SEMICOLON
  198               | BREAK SEMICOLON
  199               | RETURN SEMICOLON
  200               | RETURN expression SEMICOLON

  201 translation_unit: external_declaration
  202                 | translation_unit external_declaration

  203 external_declaration: function_definition
  204                     | declaration

  205 function_definition: declaration_specifiers declarator declaration_list compound_statement
  206                    | declaration_specifiers declarator compound_statement
  207                    | declarator declaration_list compound_statement
  208                    | declarator compound_statement

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
TYPEDEF (258)
EXTERN (259) 95
STATIC (260) 96 134
AUTO (261) 97
REGISTER (262) 98
INLINE (263) 128
RESTRICT (264) 127
CHAR (265) 100
SHORT (266) 101
INT (267) 102
LONG (268) 103
SIGNED (269) 106
UNSIGNED (270) 107
FLOAT (271) 104
DOUBLE (272) 105
CONST (273) 125
VOLATILE (274) 126
VOID (275) 99
_BOOL (276) 108
_COMPLEX (277) 109
_IMAGINARY (278) 110
STRUCT (279)
UNION (280)
ENUM (281) 116 117 118 119 120
BREAK (282) 198
CASE (283) 177
CONTINUE (284) 197
DEFAULT (285) 178
DO (286) 191
IF (287) 187 188
ELSE (288) 188
FOR (289) 192 193 194 195
GOTO (290) 196
WHILE (291) 190 191
SWITCH (292) 189
SIZEOF (293) 25 26
RETURN (294) 199 200
ELLIPSIS (295) 150
RIGHT_ASSIGN (296) 74
LEFT_ASSIGN (297) 73
ADD_ASSIGN (298) 71
SUB_ASSIGN (299) 72
MUL_ASSIGN (300) 68
BITAND_ASSIGN (301) 75
DIV_ASSIGN (302) 69
MOD_ASSIGN (303) 70
AND_ASSIGN (304)
XOR_ASSIGN (305) 76
OR_ASSIGN (306) 77
RIGHT_OP (307) 44
LEFT_OP (308) 43
INC_OP (309) 15 22
DEC_OP (310) 16 23
PTR_OP (311) 14
AND_OP (312) 60
OR_OP (313) 62
LE_OP (314) 48
GE_OP (315) 49
EQ_OP (316) 51
NE_OP (317) 52
SEMICOLON (318) 81 82 185 186 191 196 197 198 199 200
PIPE (319) 58
HASH (320)
COMMA (321) 18 20 79 92 118 119 122 150 152 156 160 163 164
QUESMARK (322) 64
EQUALITY (323) 67 94 124 165
COLON (324) 64 176 177 178
DOT (325) 13 169
CONJ (326) 56
LT (327) 46
GT (328) 47
MODULO (329) 38
DIVSN (330) 37
LSB (331) 10 133 134 135 168
RSB (332) 10 133 134 135 168
LOB (333) 4 11 12 17 18 26 34 132 136 137 138 187 188 189 190 191 192
    193 194 195
ROB (334) 4 11 12 17 18 26 34 132 136 137 138 187 188 189 190 191 192
    193 194 195
LCB (335) 17 18 116 117 118 119 159 160 179 180
RCB (336) 17 18 116 117 118 119 159 160 179 180
BITAND (337) 27 54
MULT (338) 28 36 135 143 144 145 146
PLUS (339) 29 40
MINUS (340) 30 41
TILDE (341) 31
EXCLM (342) 32
IDENTIFIER (343) 1 13 14 117 119 120 123 124 131 155 156 169 176 196
STRING_LITERAL (344) 3
PUNCTUATORS (345)
COMMENT (346)
INT_CONSTANT (347) 5
FLOAT_CONSTANT (348) 6
ENU_CONSTANT (349) 7
CHAR_CONSTANT (350) 8
LOWER_THAN_ELSE (351)


Nonterminals, with rules where they appear

$accept (97)
    on left: 0
primary_expression (98)
    on left: 1 2 3 4, on right: 9
constant (99)
    on left: 5 6 7 8, on right: 2
postfix_expression (100)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (101)
    on left: 19 20, on right: 12 20
unary_expression (102)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (103)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (104)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (105)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (106)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (107)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (108)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (109)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (110)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (111)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (112)
    on left: 57 58, on right: 58 59 60
logical_and_expression (113)
    on left: 59 60, on right: 60 61 62
logical_or_expression (114)
    on left: 61 62, on right: 62 63 64
conditional_expression (115)
    on left: 63 64, on right: 64 65 80
assignment_expression (116)
    on left: 65 66, on right: 19 20 66 78 79 134 141 158
assignment_operator (117)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (118)
    on left: 78 79, on right: 4 10 64 79 186 187 188 189 190 191 192
    194 200
constant_expression (119)
    on left: 80, on right: 124 168 177
declaration (120)
    on left: 81 82, on right: 183 194 195 204 209 210
declaration_specifiers (121)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 84 86 88 90 153
    154 205 206
init_declarator_list (122)
    on left: 91 92, on right: 82 92
init_declarator (123)
    on left: 93 94, on right: 91 92
storage_class_specifier (124)
    on left: 95 96 97 98, on right: 83 84
type_specifier (125)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    85 86 112 113
specifier_qualifier_list (126)
    on left: 112 113 114 115, on right: 112 114 157
enum_specifier (127)
    on left: 116 117 118 119 120, on right: 111
enumerator_list (128)
    on left: 121 122, on right: 116 117 118 119 122
enumerator (129)
    on left: 123 124, on right: 121 122
type_qualifier (130)
    on left: 125 126 127, on right: 87 88 114 115 147 148
function_specifier (131)
    on left: 128, on right: 89 90
declarator (132)
    on left: 129 130, on right: 93 94 132 153 205 206 207 208
direct_declarator (133)
    on left: 131 132 133 134 135 136 137 138, on right: 129 130 133
    134 135 136 137 138
type_qualifier_list_opt (134)
    on left: 139 140, on right: 133 134 135
assignment_expression_opt (135)
    on left: 141 142, on right: 133
pointer (136)
    on left: 143 144 145 146, on right: 129 145 146
type_qualifier_list (137)
    on left: 147 148, on right: 139 144 146 148
parameter_type_list (138)
    on left: 149 150, on right: 136
parameter_list (139)
    on left: 151 152, on right: 149 150 152
parameter_declaration (140)
    on left: 153 154, on right: 151 152
identifier_list (141)
    on left: 155 156, on right: 137 156
type_name (142)
    on left: 157, on right: 17 18 26 34
initializer (143)
    on left: 158 159 160, on right: 94 161 162 163 164
initializer_list (144)
    on left: 161 162 163 164, on right: 17 18 159 160 163 164
designation (145)
    on left: 165, on right: 162 164
designator_list (146)
    on left: 166 167, on right: 165 167
designator (147)
    on left: 168 169, on right: 166 167
statement (148)
    on left: 170 171 172 173 174 175, on right: 176 177 178 184 187
    188 189 190 191 192 193 194 195
labeled_statement (149)
    on left: 176 177 178, on right: 170
compound_statement (150)
    on left: 179 180, on right: 171 205 206 207 208
block_item_list (151)
    on left: 181 182, on right: 180 182
block_item (152)
    on left: 183 184, on right: 181 182
expression_statement (153)
    on left: 185 186, on right: 172 192 193 194 195
selection_statement (154)
    on left: 187 188 189, on right: 173
iteration_statement (155)
    on left: 190 191 192 193 194 195, on right: 174
jump_statement (156)
    on left: 196 197 198 199 200, on right: 175
translation_unit (157)
    on left: 201 202, on right: 0 202
external_declaration (158)
    on left: 203 204, on right: 201 202
function_definition (159)
    on left: 205 206 207 208, on right: 203
declaration_list (160)
    on left: 209 210, on right: 205 207 210


State 0

    0 $accept: . translation_unit $end

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21
    LOB         shift, and go to state 22
    MULT        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    translation_unit         go to state 35
    external_declaration     go to state 36
    function_definition      go to state 37


State 1

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 2

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 3

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 4

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 5

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


State 6

  127 type_qualifier: RESTRICT .

    $default  reduce using rule 127 (type_qualifier)


State 7

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


State 8

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 9

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 11

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 12

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 13

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


State 14

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 15

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


State 16

  126 type_qualifier: VOLATILE .

    $default  reduce using rule 126 (type_qualifier)


State 17

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


State 18

  108 type_specifier: _BOOL .

    $default  reduce using rule 108 (type_specifier)


State 19

  109 type_specifier: _COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 20

  110 type_specifier: _IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 21

  116 enum_specifier: ENUM . LCB enumerator_list RCB
  117               | ENUM . IDENTIFIER LCB enumerator_list RCB
  118               | ENUM . LCB enumerator_list COMMA RCB
  119               | ENUM . IDENTIFIER LCB enumerator_list COMMA RCB
  120               | ENUM . IDENTIFIER

    LCB         shift, and go to state 38
    IDENTIFIER  shift, and go to state 39


State 22

  132 direct_declarator: LOB . declarator ROB

    LOB         shift, and go to state 22
    MULT        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  143 pointer: MULT .
  144        | MULT . type_qualifier_list
  145        | MULT . pointer
  146        | MULT . type_qualifier_list pointer

    RESTRICT  shift, and go to state 6
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    MULT      shift, and go to state 23

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 25

  204 external_declaration: declaration .

    $default  reduce using rule 204 (external_declaration)


State 26

   81 declaration: declaration_specifiers . SEMICOLON
   82            | declaration_specifiers . init_declarator_list SEMICOLON
  205 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  206                    | declaration_specifiers . declarator compound_statement

    SEMICOLON   shift, and go to state 44
    LOB         shift, and go to state 22
    MULT        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 27

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 28

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 29

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 30

   87 declaration_specifiers: type_qualifier .
   88                       | type_qualifier . declaration_specifiers

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 50
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 31

   89 declaration_specifiers: function_specifier .
   90                       | function_specifier . declaration_specifiers

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 51
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 32

  207 function_definition: declarator . declaration_list compound_statement
  208                    | declarator . compound_statement

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21
    LCB         shift, and go to state 52

    declaration              go to state 53
    declaration_specifiers   go to state 54
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    compound_statement       go to state 55
    declaration_list         go to state 56


State 33

  130 declarator: direct_declarator .
  133 direct_declarator: direct_declarator . LSB type_qualifier_list_opt assignment_expression_opt RSB
  134                  | direct_declarator . LSB STATIC type_qualifier_list_opt assignment_expression RSB
  135                  | direct_declarator . LSB type_qualifier_list_opt MULT RSB
  136                  | direct_declarator . LOB parameter_type_list ROB
  137                  | direct_declarator . LOB identifier_list ROB
  138                  | direct_declarator . LOB ROB

    LSB  shift, and go to state 57
    LOB  shift, and go to state 58

    $default  reduce using rule 130 (declarator)


State 34

  129 declarator: pointer . direct_declarator

    LOB         shift, and go to state 22
    IDENTIFIER  shift, and go to state 24

    direct_declarator  go to state 59


State 35

    0 $accept: translation_unit . $end
  202 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 60
    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21
    LOB         shift, and go to state 22
    MULT        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    external_declaration     go to state 61
    function_definition      go to state 37


State 36

  201 translation_unit: external_declaration .

    $default  reduce using rule 201 (translation_unit)


State 37

  203 external_declaration: function_definition .

    $default  reduce using rule 203 (external_declaration)


State 38

  116 enum_specifier: ENUM LCB . enumerator_list RCB
  118               | ENUM LCB . enumerator_list COMMA RCB

    IDENTIFIER  shift, and go to state 62

    enumerator_list  go to state 63
    enumerator       go to state 64


State 39

  117 enum_specifier: ENUM IDENTIFIER . LCB enumerator_list RCB
  119               | ENUM IDENTIFIER . LCB enumerator_list COMMA RCB
  120               | ENUM IDENTIFIER .

    LCB  shift, and go to state 65

    $default  reduce using rule 120 (enum_specifier)


State 40

  132 direct_declarator: LOB declarator . ROB

    ROB  shift, and go to state 66


State 41

  147 type_qualifier_list: type_qualifier .

    $default  reduce using rule 147 (type_qualifier_list)


State 42

  145 pointer: MULT pointer .

    $default  reduce using rule 145 (pointer)


State 43

  144 pointer: MULT type_qualifier_list .
  146        | MULT type_qualifier_list . pointer
  148 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 6
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    MULT      shift, and go to state 23

    $default  reduce using rule 144 (pointer)

    type_qualifier  go to state 67
    pointer         go to state 68


State 44

   81 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 81 (declaration)


State 45

   82 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   92 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 69
    COMMA      shift, and go to state 70


State 46

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 47

   93 init_declarator: declarator .
   94                | declarator . EQUALITY initializer
  205 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  206                    | declaration_specifiers declarator . compound_statement

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    INLINE      shift, and go to state 5
    RESTRICT    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    _BOOL       shift, and go to state 18
    _COMPLEX    shift, and go to state 19
    _IMAGINARY  shift, and go to state 20
    ENUM        shift, and go to state 21
    EQUALITY    shift, and go to state 71
    LCB         shift, and go to state 52

    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 53
    declaration_specifiers   go to state 54
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    compound_statement       go to state 72
    declaration_list         go to state 73


State 48

   84 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 49

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 50

   88 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 51

   90 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers)


State 52

  179 compound_statement: LCB . RCB
  180                   | LCB . block_item_list RCB
